kubernetes/homeassistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: http
      name: https
  type: ClusterIP
  clusterIP: None
